[package]
name = "inky-ssd1608"
version = "0.1.1"
authors = ["Glenn Trigg <ggtrigg@gmail.com>"]
edition = "2021"

categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.5.1"
linux-embedded-hal = "0.3.2"
embedded-graphics = "0.7.1"
spi-memory = "0.2.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.6"

[dependencies.profont]
optional = true
version = "0.5.0"

[dependencies.nix]
optional = true
version = "0.20.0"

[features]
examples = ["profont"]